[gd_scene load_steps=2 format=2]

[ext_resource path="res://systems/AudioControl.gd" type="Script" id=1]

[node name="AudioControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="."]

[node name="sound" type="AudioStreamPlayer" parent="."]

[node name="sound2" type="AudioStreamPlayer" parent="."]

[node name="sound3" type="AudioStreamPlayer" parent="."]

[node name="death" type="AudioStreamPlayer" parent="."]

[node name="fadeout" type="Tween" parent="."]

[node name="fadein" type="Tween" parent="."]

[connection signal="tween_completed" from="fadeout" to="." method="_on_fadeout_tween_completed"]
[connection signal="tween_completed" from="fadein" to="." method="_on_fadein_tween_completed"]
